# ikigai-sexpr

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs  tests.rs
