[package]
name = "ikigai-sexpr"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Neutral, language-agnostic s-expression foundation for ikigai's portable-code arc: a `Sexpr` datum + reader/printer, a pure kernel-free sexpr→SPARQL compiler (escaping/validation, never interpolation), and the `urn:sparql:from-sexpr` transreptor (text/x-sexpr → application/sparql-query) — SPARQL from an s-expr with no lisp engine at all."
authors = ["Brian Sletten <brian.sletten@gmail.com>"]
repository = "https://github.com/ikigai-rs/ikigai-sexpr"
homepage = "https://github.com/ikigai-rs/ikigai-sexpr"
keywords = ["ikigai", "roc", "sexpr", "sparql", "transreptor"]
categories = ["compilers", "parser-implementations"]

[dependencies]
# The published kernel, consumed from crates.io — the SAME version the hosts use,
# so a host links exactly one `ikigai-core`. 0.1.46 carries `.transreptor()` +
# ArgSpec `class`/`one_of`/`default_value`, the whole surface the endpoint uses.
# Only the `urn:sparql:from-sexpr` endpoint touches ikigai-core; the `Sexpr`
# datum, reader, printer, and `sexpr_to_sparql` compiler are pure and kernel-free.
ikigai-core = "0.1.46"
async-trait = "0.1"

[dev-dependencies]
futures = "0.3" # block_on for the async endpoint test
# The real SPARQL engine, so the transreptor's emitted query is proven to RUN
# end-to-end (`urn:sparql:select` over its always-loaded vocabulary graph). Dev-dep
# ONLY. `0.1.5` pins ikigai-core `0.1.35` (caret), unifying with ours to one kernel
# type across the test build.
ikigai-sparql = "0.1.5"
